--- a/src/components/ScoreBoard/style.css
+++ b/src/components/ScoreBoard/style.css
@@ -1,8 +1,17 @@
 .scoreBoard {
   display: flex;
+  justify-content: space-between;
   background-color: #7C5E99;
   height: 70px;
   width: 320px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.Player1 {
+  background-color: blue;
+}
+
+.Player2 {
+  background-color: red;
 }
