--- a/src/components/PlayerScore/style.css
+++ b/src/components/PlayerScore/style.css
@@ -1,8 +1,18 @@
 .container-score {
+  box-sizing: border-box;
+  width: 50px;
+  height: 20px;
+  background-color: white;
+  border: 2px solid #f25a70;
+  padding: 1px;
   display: flex;
-  background-color: red;
+  gap: 1px;
 }
 
 .score-points {
-  justify-content: space-between;
+  background-color: #828282;
+  width: 14px;
+  height: 14px;
+  text-indent: -9999px;
+  overflow: hidden;
 }
