Formatado a arrow para mudar de acordo com o player atual

--- a/src/components/Arrow/style.css
+++ b/src/components/Arrow/style.css
@@ -2,14 +2,15 @@
   position: absolute;
 }
 
-.arrowDown {
+.containerArrow > .arrowDown {
   position: relative;
   bottom: 20px;
+}
+
+.player-one { 
   right: 45px;
 }
 
-.arrowRight {
-  position: relative;
-  bottom: 20px;
+.player-two {
   left: 45px;
 }
